--- a/package.json
+++ b/package.json
@@ -3,10 +3,19 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "c": "ng g c components/svgFlower --skip-import",
+    "d": "ng generate directive directives/dynamicTag --skip-import",
+    "m": "ng g m modules/landing/landing -m=app --route landing --flat",
+    "s": "ng g s services/Landing/landing",
+    "dev": "ng s -o",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run nicol-nails:serve-ssr",
+    "serve:ssr": "node dist/nicol-nails/server/main.js",
+    "build:ssr": "ng build && ng run nicol-nails:server",
+    "prerender": "ng run nicol-nails:prerender"
   },
   "private": true,
   "dependencies": {
@@ -17,7 +26,15 @@
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
+    "@angular/platform-server": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fortawesome/angular-fontawesome": "^0.12.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@nguniversal/express-engine": "^15.2.1",
+    "express": "^4.15.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -26,7 +43,10 @@
     "@angular-devkit/build-angular": "^15.2.11",
     "@angular/cli": "~15.2.11",
     "@angular/compiler-cli": "^15.2.0",
+    "@nguniversal/builders": "^15.2.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^14.15.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
