Update modified files

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "c": "ng g c components/svgFlower --skip-import",
     "d": "ng generate directive directives/dynamicTag --skip-import",
-    "m": "ng g m modules/landing/landing -m=app --route landing --flat",
-    "s": "ng g s services/Landing/landing",
+    "m": "ng g m modules/citas/citas -m=app --route citas --flat",
+    "s": "ng g s services/Citas/citas",
     "dev": "ng s -o",
     "start": "ng serve",
     "build": "ng build",
