--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "c": "ng g c components/cita/list-cita/itemListCita --skip-import",
     "d": "ng generate directive directives/dynamicTag --skip-import",
     "m": "ng g m modules/citas/citas -m=app --route citas --flat",
-    "s": "ng g s services/Citas/citas",
+    "s": "ng g s services/ServiciosApi/serviciosApi",
     "dev": "ng s -o",
     "start": "ng serve",
     "build": "ng build",
